# sciuro

./: .bazelrc  .gitignore  .golangci.yml  BUILD  MODULE.bazel  Makefile  README.md  WORKSPACE  gazelle.bzl  go.mod  go.sum  go_deps.MODULE.bazel  k8s_rules.patch
.github/workflows/: check.yaml  release.yaml
cmd/sciuro/: BUILD.bazel  main.go
internal/alert/: BUILD.bazel  match.go  match_test.go  sync.go  sync_test.go
internal/node/: BUILD.bazel  reconciler.go  reconciler_test.go
manifests/: BUILD.bazel
manifests/namespaced/: BUILD.bazel  configmap.yaml  deployment.yaml  role.yaml  rolebinding.yaml  sciuro-leader.yaml  serviceaccount.yaml
manifests/non-namespaced/: BUILD.bazel  clusterrole.yaml  clusterrolebinding.yaml  namespace.yaml
tools/: bazel  ci.bazelrc  print-workspace-status
