# Concatenate the rendered objects into a single applyable manifest.
genrule(
    name = "stable",
    srcs = ["//manifests/namespaced:objects"],
    outs = ["stable.yaml"],
    cmd = "for f in $$(printf '%s\\n' $(locations //manifests/namespaced:objects) | sort); do echo '---'; cat $$f; done > $@",
    visibility = ["//visibility:public"],
)

genrule(
    name = "cluster",
    srcs = ["//manifests/non-namespaced:objects"],
    outs = ["cluster.yaml"],
    cmd = "for f in $$(printf '%s\\n' $(locations //manifests/non-namespaced:objects) | sort); do echo '---'; cat $$f; done > $@",
    visibility = ["//visibility:public"],
)
