load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "alert",
    srcs = [
        "match.go",
        "sync.go",
    ],
    importpath = "github.com/cloudflare/sciuro/internal/alert",
    visibility = ["//:__subpackages__"],
    deps = [
        "@com_github_go_logr_logr//:logr",
        "@com_github_prometheus_alertmanager//api/v2/client/alert",
        "@com_github_prometheus_alertmanager//api/v2/models",
        "@com_github_prometheus_alertmanager//pkg/labels",
        "@com_github_prometheus_client_golang//prometheus",
        "@io_k8s_apimachinery//pkg/util/wait",
        "@io_k8s_sigs_controller_runtime//pkg/manager",
    ],
)

go_test(
    name = "alert_test",
    timeout = "short",
    srcs = [
        "match_test.go",
        "sync_test.go",
    ],
    embed = [":alert"],
    deps = [
        "@com_github_go_logr_logr//:logr",
        "@com_github_prometheus_alertmanager//api/v2/client/alert",
        "@com_github_prometheus_alertmanager//api/v2/models",
        "@com_github_prometheus_alertmanager//pkg/labels",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//mock",
        "@com_github_stretchr_testify//require",
        "@io_k8s_sigs_controller_runtime//pkg/metrics",
    ],
)
