load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "alert",
    srcs = ["sync.go"],
    importpath = "github.com/cloudflare/sciuro/internal/alert",
    visibility = ["//:__subpackages__"],
    deps = [
        "@com_github_go_logr_logr//:logr",
        "@com_github_google_cel_go//cel:go_default_library",
        "@com_github_google_cel_go//checker/decls:go_default_library",
        "@com_github_prometheus_alertmanager//api/v2/client",
        "@com_github_prometheus_alertmanager//api/v2/client/alert",
        "@com_github_prometheus_alertmanager//api/v2/models",
        "@com_github_prometheus_alertmanager//cli",
        "@com_github_prometheus_client_golang//api",
        "@com_github_prometheus_client_golang//api/prometheus/v1:prometheus",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_common//model",
        "@io_k8s_apimachinery//pkg/util/wait",
        "@io_k8s_sigs_controller_runtime//pkg/manager",
    ],
)

go_test(
    name = "alert_test",
    timeout = "short",
    srcs = ["sync_test.go"],
    embed = [":alert"],
    deps = [
        "@com_github_go_logr_logr//:logr",
        "@com_github_prometheus_client_golang//api/prometheus/v1:prometheus",
        "@com_github_prometheus_common//model",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//mock",
        "@io_k8s_sigs_controller_runtime//pkg/metrics",
    ],
)
