package(default_visibility = ["//manifests:__subpackages__"])

# Pin the image by the digest of the built multi-arch index so the rendered
# deployment is immutable. The registry prefix comes from --define repo=...
genrule(
    name = "deployment",
    srcs = [
        "deployment.yaml",
        "//cmd/sciuro:image_index",
    ],
    outs = ["deployment.rendered.yaml"],
    cmd = """\
set -eu
digest=$$(grep -oE -m1 'sha256:[a-f0-9]{64}' "$(location //cmd/sciuro:image_index)/index.json" || true)
if [ -z "$$digest" ]; then echo "deployment: no sha256 digest found in index.json" >&2; exit 1; fi
sed -e "s|docker\\.io/cloudflare/sciuro:latest|$(repo)/sciuro@$$digest|g" "$(location deployment.yaml)" > "$@"
""",
)

filegroup(
    name = "objects",
    srcs = [
        "configmap.yaml",
        "role.yaml",
        "rolebinding.yaml",
        "sciuro-leader.yaml",
        "serviceaccount.yaml",
        ":deployment.rendered.yaml",
    ],
)
