package(default_visibility = ["//manifests:__subpackages__"])

# Bind the ServiceAccount subject to the configured namespace, e.g.
#   --define namespace=node-remediation
genrule(
    name = "clusterrolebinding",
    srcs = ["clusterrolebinding.yaml"],
    outs = ["clusterrolebinding.rendered.yaml"],
    cmd = "sed -e 's|^\\( *namespace: \\)kube-system$$|\\1$(namespace)|' $< > $@",
)

filegroup(
    name = "objects",
    srcs = [
        "clusterrole.yaml",
        "namespace.yaml",
        ":clusterrolebinding.rendered.yaml",
    ],
)
